# low-level-programming-3

./: .gitignore  CMakeLists.txt  countries_dataset.txt  dataset.txt  db_file.txt.dump  db_file_with_countries.txt.dump  db_file_with_relations.txt.dump  relations.txt
client/: main.c  req_structure.h  req_utils.c  transport.c  transport.h
client/parser/: graphQL.y  lex.h  lex.l  lex.yy.c  query.gql  y.output  y.tab.c  y.tab.h
client/thrift/: schema.thrift
client/thrift/gen-c_glib/: schema_types.c  schema_types.h
server/: main.c  req_structure.h  req_utils.c  req_utils.h  requests.c  requests.h  transport.c  transport.h
server/database/client/: manage.c  manage.h  queries.h
server/database/db/: db.c  db.h  entities.c  entities.h  file.c  file.h  local_entities.h
server/database/test_utils/: test_objects_creation.c  test_objects_creation.h
server/database/utils/: std_out.c  std_out.h  strings.c  strings.h  structures.h
server/thrift/: req_structure.h
transport/: schema.thrift
transport/gen-c_glib/: d_b_request.c  d_b_request.h  schema_types.c  schema_types.h
